clean up generator test

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,2 @@
 parse_json:
-	flatc -b --strict-json --defaults-json -o . ../data/schema.fbs out.json
+	flatc -b --strict-json --defaults-json -o . ../data/schema.fbs cifar10_model_GENERATED.json
