improve generator-test

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,2 +1,6 @@
-parse_json:
-	flatc -b --strict-json --defaults-json -o . ../data/schema.fbs cifar10_model_GENERATED.json
+to-json:
+	flatc -t --strict-json --defaults-json -o . ../data/schemas/tflite/schema.fbs -- cifar10_model_GENERATED.tflite --raw-binary
+
+from-json:
+	flatc -b --strict-json --defaults-json -o . ../data/schemas/tflite/schema.fbs cifar10_model_GENERATED.json
+	
