furher optimize conversion testing, update /test/Makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,7 @@
+TFL?=alexnet_reduced.tflite
+
 to-json:
-	flatc -t --strict-json --defaults-json -o . ../data/schemas/tflite/schema.fbs -- cifar10_model_GENERATED.tflite --raw-binary
+	flatc -t --strict-json --defaults-json -o . ../data/schemas/tflite/schema.fbs -- $(TFL) --raw-binary
 
 from-json:
 	flatc -b --strict-json --defaults-json -o . ../data/schemas/tflite/schema.fbs cifar10_model_GENERATED.json
